# research-on-the-effectiveness-of-execution

./: 2 lab.sln  2 lab.vcxproj  CMakeLists.txt  main.cpp
